<resources>
    <string name="app_name">TPMovilesFinal2C</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_contrato">Contrato</string>
    <string name="menu_inmueble">Inmuebles</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inquilino">Inquilino</string>
    <string name="menu_logout">Logout</string>

    <string name="etEmail">Ingrese su Email</string>
    <string name="etContraseña">Ingrese su Contraseña</string>
    <string name="btIngresar">Ingresar</string>

    <string name="btEditar">Editar</string>
    <string name="btGuardar">Guardar</string>
    <string name="etId">Id</string>
    <string name="etNombre">Nombre</string>
    <string name="etDni">DNI</string>
    <string name="etApellido">Apellido</string>
    <string name="etTelefono">Telefono</string>
    <string name="cbEstado">Disponible</string>

    <string name="tvlabelCod">Código</string>
    <string name="tvlabelNom">Nombre</string>
    <string name="tvlabelAp">Apellido</string>
    <string name="tvlabelDni">Dni</string>
    <string name="tvlabelMail">Mail</string>
    <string name="tvlabelTel">Teléfono</string>
    <string name="tvlabelGar">Garante</string>
    <string name="tvlabelGarTel">Teléfono Garante</string>
    <string name="tvInf">Información del Inquilino</string>
    <string name="btVer">Ver</string>
    <string name="tv">Información del Inmueble</string>

    <string name="tvConInf">Informacion del Contrato</string>
    <string name="tvConCod">Código de Contrato</string>
    <string name="tvConFecInicio">Fecha De Inicio</string>
    <string name="tvConFecFin">Fecha de Finalizacion</string>
    <string name="tvConMont">Monto de Alquiler</string>
    <string name="tvConInq">Inquilino</string>
    <string name="tvConInmu">Inmueble</string>
    <string name="btPagos">Pagos</string>

    <string name="tv1">Código de Pagos</string>
    <string name="tv2">Número de Pago</string>
    <string name="tv3">Código de Contrato</string>
    <string name="tv4">Importe</string>
    <string name="tv5">Fecha de Pago</string>
    <string name="link">
        <a href="">Olvidé mi contraseña</a>
    </string>
    <string-array name="tipos">
        <item>Local</item>
        <item>Deposito</item>
        <item>Casa</item>
        <item>Departamento</item>
        <item>Residencial</item>
    </string-array>
</resources>